--- a/LaTeX/proposal.tex
+++ b/LaTeX/proposal.tex
@@ -8,7 +8,7 @@
 \renewcommand{\familydefault}{\sfdefault}
 \begin{document}
     \maketitle{}
-    {\raggedleft\textbf{Title of research:} (work in progress): \\}
+    {\raggedleft\textbf{Title of research:} (work in progress):} \\
     Comparative Investigation into the Extent, Formulation, and Arguments of confidence in- and against - COVID-19 Vaccines in the US on Reddit \\ \\
 
     {\raggedleft\textbf{Research Question} (work in progress)}
