recompression & colum drop for Submission

--- a/Test_run/find_subs.ipynb
+++ b/Test_run/find_subs.ipynb
@@ -9,7 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/05/21 13:45:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/05/21 21:55:48 WARN Utils: Your hostname, Jakobs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.1.118 instead (on interface en0)\n",
+      "22/05/21 21:55:48 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/05/21 21:55:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -21,7 +23,8 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark import SparkConf\n",
     "from pyspark import SparkContext\n",
-    "conf = SparkConf().setAppName(\"Identify_subs\").setMaster(\"local[10]\")\n",
+    "from pyspark.sql import SQLContext\n",
+    "conf = SparkConf().setAppName(\"Identify_subs\").setMaster(\"local[2]\")\n",
     "sc = SparkContext(conf=conf)"
    ]
   },
@@ -37,13 +40,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://dsba.sm.unibocconi.it:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.118:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
        "                <dd><code>v3.1.2</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[10]</code></dd>\n",
+       "                <dd><code>local[2]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>Identify_subs</code></dd>\n",
        "            </dl>\n",
@@ -51,7 +54,7 @@
        "        "
       ],
       "text/plain": [
-       "<SparkContext master=local[10] appName=Identify_subs>"
+       "<SparkContext master=local[2] appName=Identify_subs>"
       ]
      },
      "execution_count": 2,
@@ -65,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt = sc.textFile(\"../../Files/RS_2021-06.bz2\", use_unicode=False)"
+    "txt = sc.textFile(\"../../Files/RS_2006-04.bz2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -83,20 +86,89 @@
      "text": [
       "                                                                                \r"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[b'{\"all_awardings\":[],\"allow_live_comments\":false,\"archived\":false,\"author\":\"[deleted]\",\"author_created_utc\":null,\"author_flair_background_color\":\"\",\"author_flair_css_class\":null,\"author_flair_template_id\":null,\"author_flair_text\":null,\"author_flair_text_color\":\"dark\",\"can_gild\":false,\"category\":null,\"content_categories\":null,\"contest_mode\":false,\"created_utc\":1622563341,\"discussion_type\":null,\"distinguished\":\"moderator\",\"domain\":\"self.OkBuddyRobocop\",\"edited\":false,\"event_end\":1623038400.0,\"event_is_live\":false,\"event_start\":1622563200.0,\"gilded\":0,\"gildings\":{},\"hidden\":false,\"hide_score\":false,\"id\":\"kvrq9o\",\"is_created_from_ads_ui\":false,\"is_crosspostable\":false,\"is_meta\":false,\"is_original_content\":true,\"is_reddit_media_domain\":false,\"is_robot_indexable\":false,\"is_self\":true,\"is_video\":false,\"link_flair_background_color\":\"#005ba1\",\"link_flair_css_class\":\"\",\"link_flair_richtext\":[{\"e\":\"text\",\"t\":\"ORP Post\"}],\"link_flair_template_id\":\"307c7118-aecf-11ea-935f-0e9f48bb73b3\",\"link_flair_text\":\"ORP Post\",\"link_flair_text_color\":\"light\",\"link_flair_type\":\"richtext\",\"locked\":false,\"media\":null,\"media_embed\":{},\"media_only\":false,\"name\":\"t3_kvrq9o\",\"no_follow\":false,\"num_comments\":0,\"num_crossposts\":0,\"over_18\":false,\"parent_whitelist_status\":null,\"permalink\":\"\\\\/r\\\\/OkBuddyRobocop\\\\/comments\\\\/kvrq9o\\\\/rokbuddyrobocops_1st_birthday_party_community\\\\/\",\"pinned\":false,\"pwls\":null,\"quarantine\":false,\"removed_by_category\":\"deleted\",\"retrieved_utc\":1623343669,\"score\":1,\"secure_media\":null,\"secure_media_embed\":{},\"selftext\":\"[deleted]\",\"send_replies\":true,\"spoiler\":false,\"stickied\":false,\"subreddit\":\"OkBuddyRobocop\",\"subreddit_id\":\"t5_2rlflm\",\"subreddit_subscribers\":127,\"subreddit_type\":\"public\",\"suggested_sort\":\"confidence\",\"thumbnail\":\"default\",\"thumbnail_height\":null,\"thumbnail_width\":null,\"title\":\"r\\\\/OkBuddyRobocop\\'s 1st Birthday Party - Community Project - Short History [EVENT STARTS NOW, ENDS JUNE 7]\",\"top_awarded_type\":null,\"total_awards_received\":0,\"treatment_tags\":[],\"upvote_ratio\":1.0,\"url\":\"https:\\\\/\\\\/www.reddit.com\\\\/r\\\\/OkBuddyRobocop\\\\/comments\\\\/kvrq9o\\\\/rokbuddyrobocops_1st_birthday_party_community\\\\/\",\"whitelist_status\":null,\"wls\":null}']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "txt.take(1)"
+    "sqlContext = SQLContext(sc)\n",
+    "df = sqlContext.read.json(txt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "keep = ['author','selftext', 'id', 'name', 'num_comments', 'num_crossposts', 'created_utc', 'crosspost_parent', 'score', 'subreddit', 'subreddit_id', 'subreddit_subscribers', 'title', 'retrieved_utc', 'upvote_ratio']\n",
+    "cols = df.columns\n",
+    "cols = [ele for ele in cols if ele not in keep]\n",
+    "df2 = df.drop(*cols)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['archived', 'author', 'author_cakeday', 'author_flair_background_color', 'author_flair_css_class', 'author_flair_richtext', 'author_flair_text', 'author_flair_text_color', 'author_flair_type', 'brand_safe', 'can_gild', 'contest_mode', 'created_utc', 'distinguished', 'domain', 'edited', 'gilded', 'hidden', 'hide_score', 'id', 'is_crosspostable', 'is_reddit_media_domain', 'is_self', 'is_video', 'link_flair_css_class', 'link_flair_richtext', 'link_flair_text', 'link_flair_text_color', 'link_flair_type', 'locked', 'media', 'no_follow', 'num_comments', 'num_crossposts', 'over_18', 'parent_whitelist_status', 'permalink', 'post_hint', 'preview', 'retrieved_on', 'rte_mode', 'score', 'secure_media', 'selftext', 'send_replies', 'spoiler', 'stickied', 'subreddit', 'subreddit_id', 'subreddit_name_prefixed', 'subreddit_type', 'suggested_sort', 'thumbnail', 'thumbnail_height', 'thumbnail_width', 'title', 'url', 'whitelist_status']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols = df.columns\n",
+    "print(cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- author: string (nullable = true)\n",
+      " |-- created_utc: long (nullable = true)\n",
+      " |-- id: string (nullable = true)\n",
+      " |-- num_comments: long (nullable = true)\n",
+      " |-- num_crossposts: long (nullable = true)\n",
+      " |-- score: long (nullable = true)\n",
+      " |-- selftext: string (nullable = true)\n",
+      " |-- subreddit: string (nullable = true)\n",
+      " |-- subreddit_id: string (nullable = true)\n",
+      " |-- title: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/05/21 22:01:18 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df2.write.parquet(f\"../../Files/test.parquet\", mode='overwrite')"
    ]
   },
   {
@@ -2058,10 +2130,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
+   "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env')",
+   "display_name": "Python 3.9.12 ('reddit_env_test')",
    "language": "python",
    "name": "python3"
   },
