crosspost_from via API working

--- a/Test_run/find_subs.ipynb
+++ b/Test_run/find_subs.ipynb
@@ -163,7 +163,8 @@
      "output_type": "stream",
      "text": [
       "22/05/21 22:01:18 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "                                                                                \r"
+      "22/05/21 23:21:43 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 1778700 ms exceeds timeout 120000 ms\n",
+      "22/05/21 23:21:43 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
      ]
     }
    ],
