--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import praw\n",
+    "import psaw\n",
     "import numpy\n",
     "%matplotlib inline\n",
     "from pylab import *\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "import simplejson as json\n",
-    "from psaw import PushshiftAPI\n",
+    "from pmaw import PushshiftAPI\n",
     "import pyspark\n",
     "import datetime as dt\n",
     "\n",
@@ -44,47 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/site-packages/psaw/PushshiftAPI.py:192: UserWarning: Got non 200 code 429\n",
-      "  warnings.warn(\"Got non 200 code %s\" % response.status_code)\n",
-      "/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/site-packages/psaw/PushshiftAPI.py:180: UserWarning: Unable to connect to pushshift.io. Retrying after backoff.\n",
-      "  warnings.warn(\"Unable to connect to pushshift.io. Retrying after backoff.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api = PushshiftAPI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gen2 = api.search_submissions(\n",
-    "    filter=[ 'id', 'url', 'title', 'subreddit', 'subreddit_id', 'subreddit_subscribers',\n",
-    "        'num_crossposts', 'crosspost_parent', 'created_utc', 'author'],\n",
-    "    limit= 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/site-packages/psaw/PushshiftAPI.py:252: UserWarning: Not all PushShift shards are active. Query results may be incomplete\n",
-      "  warnings.warn(shards_down_message)\n"
+      "Not all PushShift shards are active. Query results may be incomplete.\n"
      ]
     },
     {
@@ -117,79 +94,79 @@
        "      <th>subreddit_subscribers</th>\n",
        "      <th>title</th>\n",
        "      <th>url</th>\n",
-       "      <th>created</th>\n",
        "      <th>crosspost_parent</th>\n",
+       "      <th>crosspost_parent_list</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>No-Trouble3558</td>\n",
-       "      <td>1654509590</td>\n",
-       "      <td>v5zgbs</td>\n",
+       "      <td>David_McTravord555</td>\n",
+       "      <td>1654625979</td>\n",
+       "      <td>v73j9f</td>\n",
        "      <td>0</td>\n",
-       "      <td>onlybootyfans</td>\n",
-       "      <td>t5_5pqkye</td>\n",
-       "      <td>16769</td>\n",
-       "      <td>Korinne Koopf 🫦 ALL HER DAILY UPDATED ONLYFANS...</td>\n",
-       "      <td>https://www.redgifs.com/watch/unrulyauthorized...</td>\n",
-       "      <td>1.654502e+09</td>\n",
+       "      <td>worldbuilding</td>\n",
+       "      <td>t5_2rd6n</td>\n",
+       "      <td>905089</td>\n",
+       "      <td>In my universe where magical creatures (like v...</td>\n",
+       "      <td>https://www.reddit.com/r/worldbuilding/comment...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>dimuchathu</td>\n",
-       "      <td>1654509590</td>\n",
-       "      <td>v5zgbq</td>\n",
+       "      <td>Antdryem_</td>\n",
+       "      <td>1654625979</td>\n",
+       "      <td>v73j9d</td>\n",
        "      <td>0</td>\n",
-       "      <td>whichgamebuy</td>\n",
-       "      <td>t5_4oagkt</td>\n",
-       "      <td>25</td>\n",
-       "      <td>Kittyprinxessvip OnlyFans Leaked Nudes - ONLYF...</td>\n",
-       "      <td>https://leakonly.fans/kittyprinxessvip-onlyfan...</td>\n",
-       "      <td>1.654502e+09</td>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>t5_2r1hz</td>\n",
+       "      <td>76494</td>\n",
+       "      <td>Getting to live in Dublin</td>\n",
+       "      <td>https://www.reddit.com/r/Dublin/comments/v73j9...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ludanela</td>\n",
-       "      <td>1654509590</td>\n",
-       "      <td>v5zgbn</td>\n",
+       "      <td>Spnkmeimbd</td>\n",
+       "      <td>1654625979</td>\n",
+       "      <td>v73j9a</td>\n",
        "      <td>0</td>\n",
-       "      <td>PetiteNSFW</td>\n",
-       "      <td>t5_yktsv</td>\n",
-       "      <td>337188</td>\n",
-       "      <td>can I catch your attention with my petite ebon...</td>\n",
-       "      <td>https://i.imgur.com/uppFBvQ.gifv</td>\n",
-       "      <td>1.654502e+09</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>sideboobandass</td>\n",
+       "      <td>t5_2pam8b</td>\n",
+       "      <td>3271</td>\n",
+       "      <td>Come keep me warm</td>\n",
+       "      <td>https://i.redd.it/y7heujw9uy391.jpg</td>\n",
+       "      <td>t3_v5yhln</td>\n",
+       "      <td>[{'all_awardings': [], 'allow_live_comments': ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ImEliasK</td>\n",
-       "      <td>1654509589</td>\n",
-       "      <td>v5zgbk</td>\n",
+       "      <td>johnevepierrot</td>\n",
+       "      <td>1654625979</td>\n",
+       "      <td>v73j99</td>\n",
        "      <td>0</td>\n",
-       "      <td>gmt2</td>\n",
-       "      <td>t5_2fnpaz</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Its currently June 06, 2022 at 11:59AMat GMT +2</td>\n",
-       "      <td>https://www.reddit.com/r/gmt2/comments/v5zgbk/...</td>\n",
-       "      <td>1.654502e+09</td>\n",
+       "      <td>Bromance2</td>\n",
+       "      <td>t5_3h6m2l</td>\n",
+       "      <td>383</td>\n",
+       "      <td>Looking for Connections</td>\n",
+       "      <td>https://www.reddit.com/r/Bromance2/comments/v7...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Few-Ad5000</td>\n",
-       "      <td>1654509589</td>\n",
-       "      <td>v5zgbj</td>\n",
+       "      <td>pirl_opden</td>\n",
+       "      <td>1654625979</td>\n",
+       "      <td>v73j97</td>\n",
        "      <td>0</td>\n",
-       "      <td>Sugarmommas</td>\n",
-       "      <td>t5_3ewb7t</td>\n",
-       "      <td>39202</td>\n",
-       "      <td>I’m a legit sugar momma seeking for honest and...</td>\n",
-       "      <td>https://www.reddit.com/r/Sugarmommas/comments/...</td>\n",
-       "      <td>1.654502e+09</td>\n",
+       "      <td>HiTMAN</td>\n",
+       "      <td>t5_2rn0x</td>\n",
+       "      <td>134437</td>\n",
+       "      <td>Another JIRA ticket,another set of funerals</td>\n",
+       "      <td>https://v.redd.it/w7e46i2bo8491</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -197,51 +174,186 @@
        "</div>"
       ],
       "text/plain": [
-       "           author  created_utc      id  num_crossposts      subreddit  \\\n",
-       "0  No-Trouble3558   1654509590  v5zgbs               0  onlybootyfans   \n",
-       "1      dimuchathu   1654509590  v5zgbq               0   whichgamebuy   \n",
-       "2        ludanela   1654509590  v5zgbn               0     PetiteNSFW   \n",
-       "3        ImEliasK   1654509589  v5zgbk               0           gmt2   \n",
-       "4      Few-Ad5000   1654509589  v5zgbj               0    Sugarmommas   \n",
+       "               author  created_utc      id  num_crossposts       subreddit  \\\n",
+       "0  David_McTravord555   1654625979  v73j9f               0   worldbuilding   \n",
+       "1           Antdryem_   1654625979  v73j9d               0          Dublin   \n",
+       "2          Spnkmeimbd   1654625979  v73j9a               0  sideboobandass   \n",
+       "3      johnevepierrot   1654625979  v73j99               0       Bromance2   \n",
+       "4          pirl_opden   1654625979  v73j97               0          HiTMAN   \n",
        "\n",
        "  subreddit_id  subreddit_subscribers  \\\n",
-       "0    t5_5pqkye                  16769   \n",
-       "1    t5_4oagkt                     25   \n",
-       "2     t5_yktsv                 337188   \n",
-       "3    t5_2fnpaz                     15   \n",
-       "4    t5_3ewb7t                  39202   \n",
+       "0     t5_2rd6n                 905089   \n",
+       "1     t5_2r1hz                  76494   \n",
+       "2    t5_2pam8b                   3271   \n",
+       "3    t5_3h6m2l                    383   \n",
+       "4     t5_2rn0x                 134437   \n",
        "\n",
        "                                               title  \\\n",
-       "0  Korinne Koopf 🫦 ALL HER DAILY UPDATED ONLYFANS...   \n",
-       "1  Kittyprinxessvip OnlyFans Leaked Nudes - ONLYF...   \n",
-       "2  can I catch your attention with my petite ebon...   \n",
-       "3    Its currently June 06, 2022 at 11:59AMat GMT +2   \n",
-       "4  I’m a legit sugar momma seeking for honest and...   \n",
+       "0  In my universe where magical creatures (like v...   \n",
+       "1                          Getting to live in Dublin   \n",
+       "2                                  Come keep me warm   \n",
+       "3                            Looking for Connections   \n",
+       "4        Another JIRA ticket,another set of funerals   \n",
        "\n",
-       "                                                 url       created  \\\n",
-       "0  https://www.redgifs.com/watch/unrulyauthorized...  1.654502e+09   \n",
-       "1  https://leakonly.fans/kittyprinxessvip-onlyfan...  1.654502e+09   \n",
-       "2                   https://i.imgur.com/uppFBvQ.gifv  1.654502e+09   \n",
-       "3  https://www.reddit.com/r/gmt2/comments/v5zgbk/...  1.654502e+09   \n",
-       "4  https://www.reddit.com/r/Sugarmommas/comments/...  1.654502e+09   \n",
+       "                                                 url crosspost_parent  \\\n",
+       "0  https://www.reddit.com/r/worldbuilding/comment...              NaN   \n",
+       "1  https://www.reddit.com/r/Dublin/comments/v73j9...              NaN   \n",
+       "2                https://i.redd.it/y7heujw9uy391.jpg        t3_v5yhln   \n",
+       "3  https://www.reddit.com/r/Bromance2/comments/v7...              NaN   \n",
+       "4                    https://v.redd.it/w7e46i2bo8491              NaN   \n",
        "\n",
-       "  crosspost_parent  \n",
-       "0              NaN  \n",
-       "1              NaN  \n",
-       "2              NaN  \n",
-       "3              NaN  \n",
-       "4              NaN  "
+       "                               crosspost_parent_list  \n",
+       "0                                                NaN  \n",
+       "1                                                NaN  \n",
+       "2  [{'all_awardings': [], 'allow_live_comments': ...  \n",
+       "3                                                NaN  \n",
+       "4                                                NaN  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results2 = list(gen2)\n",
-    "temp = pd.DataFrame([thing.d_ for thing in results2])\n",
+    "gen2 = api.search_submissions(\n",
+    "    filter=[ 'id', 'url', 'title', 'subreddit', 'subreddit_id', 'subreddit_subscribers',\n",
+    "        'num_crossposts', 'crosspost_parent', 'crosspost_parent_list', 'created_utc', 'author'],\n",
+    "    limit= 100)\n",
+    "\n",
+    "temp = pd.DataFrame([thing for thing in gen2])\n",
     "temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = [ting for ting in gen2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "temp = pd.DataFrame([thing for thing in gen2])\n",
+    "temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = t.crosspost_parent_list.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'float' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m l:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=1'>2</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39;49m(i) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=2'>3</a>\u001b[0m         \u001b[39mprint\u001b[39m(i)\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'float' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "for i in l:\n",
+    "    if len(i) > 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'entertainment'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[6][0]['subreddit']"
    ]
   },
   {
