ready for server

--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -23,6 +23,257 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggregate(df): #aggregate over the subreddits so that we get a list with subreddit - crosspost from and counts\n",
+    "    \n",
+    "    df2 = df.groupby(['subreddit','subreddit_id','crosspost_parent', 'crosspost_parent_id']).agg({'subreddit_subscribers': 'mean', 'crosspost_parent_subs': 'mean' , 'author' : 'count', 'crosspost_parent_num': 'sum'}).reset_index()\n",
+    "    df2.rename(columns = {'author':'count',}, inplace = True)\n",
+    "    df2['crosspost_parent_subs'] = df2['crosspost_parent_subs'].astype(int)\n",
+    "\n",
+    "    imp = df2.groupby(['crosspost_parent']).agg({'subreddit': 'count', 'count': 'sum'})\n",
+    "    imp = imp.rename(columns ={'count': 'total'}) \n",
+    "    imp.drop(['subreddit'], axis=1, inplace=True)\n",
+    "    df3 = df2.merge(imp, on='crosspost_parent', how='left')\n",
+    "\n",
+    "    print('aggregated')\n",
+    "    return df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_crosspost_child(df, outfile): #find the crosspost children of posts from the observed subreddits\n",
+    "    api = PushshiftAPI()\n",
+    "    df = df[df['num_crossposts'] > 0] # We do this by looking for posts that have been crossposted\n",
+    "    t = df.groupby(['url']).agg({'num_crossposts': 'sum', 'id':  'max'}).reset_index()\n",
+    "    urls = list(t['url']) # then collect the url of posts / attached links / pictures\n",
+    "\n",
+    "    df = pd.DataFrame(columns=['id', 'url', 'title', 'subreddit', 'subreddit_id', 'subreddit_subscribers',\n",
+    "        'num_crossposts', 'crosspost_parent', 'created_utc', 'author'])\n",
+    "\n",
+    "    results2 = api.search_submissions(\n",
+    "        url = urls, # and search for them using the pushshift api\n",
+    "        filter=[ 'id', 'url', 'title', 'subreddit', 'subreddit_id', 'subreddit_subscribers',\n",
+    "            'num_crossposts', 'crosspost_parent', 'created_utc', 'author'],\n",
+    "        limit = 100) #limit to avoid going over the rate limit. Can be small, since we're specifically only looking for one link and don't expect too high of a number of posts\n",
+    "    \n",
+    "    temp = pd.DataFrame([thing for thing in results2])\n",
+    "    df = pd.concat([df, temp])\n",
+    "\n",
+    "    df2 = df[df['num_crossposts'] > 0].reset_index(drop=True) #split into parent posts (number of crossposts > 0 )\n",
+    "    df3 = df[df['num_crossposts'] == 0].reset_index(drop=True) # and child posts (number of crossposts == 0)\n",
+    "    df3 = df3[df3['crosspost_parent'].notna()] # Drop all children where field for parent is empty\n",
+    "    df3['crosspost_parent']  = df3['crosspost_parent'].apply(lambda x: x[3:])\n",
+    "    df2.drop('crosspost_parent', axis=1, inplace=True)\n",
+    "    df2 = df2.rename(columns ={'subreddit':'crosspost_parent','subreddit_id': 'crosspost_parent_id', 'subreddit_subscribers': 'crosspost_parent_subs', 'num_crossposts': 'crosspost_parent_num'})\n",
+    "    df4 = df2.merge(df3, left_on='id', right_on='crosspost_parent', suffixes= ('','_y'))\n",
+    "\n",
+    "    df4 = df4[(df4['crosspost_parent'].str.startswith('u_') == False) & (df4['subreddit'].str.startswith('u_') == False)] # get rid off users as subreddit\n",
+    "    df5 = aggregate(df4)\n",
+    "    \n",
+    "    print('identified children')\n",
+    "    df5.to_pickle(f'../../Files/{outfile}_cross_child.pickle') # save file to avoid straining the API\n",
+    "    return df5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('/Users/jakobschlierf/Desktop/Master/Thesis/Files/test0607_raw2.pickle')\n",
+    "df = df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 12)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Not all PushShift shards are active. Query results may be incomplete.\n",
+      "Not all PushShift shards are active. Query results may be incomplete.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aggregated\n",
+      "identified children\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = get_crosspost_child(df, 'random')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>subreddit_id</th>\n",
+       "      <th>crosspost_parent</th>\n",
+       "      <th>crosspost_parent_id</th>\n",
+       "      <th>subreddit_subscribers</th>\n",
+       "      <th>crosspost_parent_subs</th>\n",
+       "      <th>count</th>\n",
+       "      <th>crosspost_parent_num</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ArizonaLeft</td>\n",
+       "      <td>t5_2i2eaq</td>\n",
+       "      <td>ABoringDystopia</td>\n",
+       "      <td>t5_3c6l1</td>\n",
+       "      <td>481.0</td>\n",
+       "      <td>514344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IWW</td>\n",
+       "      <td>t5_2rno8</td>\n",
+       "      <td>ABoringDystopia</td>\n",
+       "      <td>t5_3c6l1</td>\n",
+       "      <td>20951.0</td>\n",
+       "      <td>514344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LateStageCapitalism</td>\n",
+       "      <td>t5_39qgx</td>\n",
+       "      <td>ABoringDystopia</td>\n",
+       "      <td>t5_3c6l1</td>\n",
+       "      <td>605771.0</td>\n",
+       "      <td>514344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>antiwork</td>\n",
+       "      <td>t5_2y77d</td>\n",
+       "      <td>ABoringDystopia</td>\n",
+       "      <td>t5_3c6l1</td>\n",
+       "      <td>1016961.0</td>\n",
+       "      <td>514344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>kelowna</td>\n",
+       "      <td>t5_2rtgc</td>\n",
+       "      <td>ABoringDystopia</td>\n",
+       "      <td>t5_3c6l1</td>\n",
+       "      <td>11476.0</td>\n",
+       "      <td>514344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             subreddit subreddit_id crosspost_parent crosspost_parent_id  \\\n",
+       "0          ArizonaLeft    t5_2i2eaq  ABoringDystopia            t5_3c6l1   \n",
+       "1                  IWW     t5_2rno8  ABoringDystopia            t5_3c6l1   \n",
+       "2  LateStageCapitalism     t5_39qgx  ABoringDystopia            t5_3c6l1   \n",
+       "3             antiwork     t5_2y77d  ABoringDystopia            t5_3c6l1   \n",
+       "4              kelowna     t5_2rtgc  ABoringDystopia            t5_3c6l1   \n",
+       "\n",
+       "   subreddit_subscribers  crosspost_parent_subs  count crosspost_parent_num  \\\n",
+       "0                  481.0                 514344      1                    6   \n",
+       "1                20951.0                 514344      1                    6   \n",
+       "2               605771.0                 514344      1                    6   \n",
+       "3              1016961.0                 514344      1                    6   \n",
+       "4                11476.0                 514344      1                    6   \n",
+       "\n",
+       "   total  \n",
+       "0      6  \n",
+       "1      6  \n",
+       "2      6  \n",
+       "3      6  \n",
+       "4      6  "
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [],
