--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -3217,6 +3217,78 @@
     "# lines.map(lambda x: x[0]).take(1)\n",
     "lines.take(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process SpawnPoolWorker-11:\n",
+      "Process SpawnPoolWorker-10:\n",
+      "Process SpawnPoolWorker-12:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/queues.py\", line 368, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "Traceback (most recent call last):\n",
+      "AttributeError: Can't get attribute 'f' on <module '__main__' (built-in)>\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/queues.py\", line 368, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "AttributeError: Can't get attribute 'f' on <module '__main__' (built-in)>\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/queues.py\", line 368, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'f' on <module '__main__' (built-in)>\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb Cell 62'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000061?line=3'>4</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m*\u001b[39mx\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000061?line=6'>7</a>\u001b[0m \u001b[39mwith\u001b[39;00m Pool(\u001b[39m5\u001b[39m) \u001b[39mas\u001b[39;00m p:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000061?line=7'>8</a>\u001b[0m     \u001b[39mprint\u001b[39m(p\u001b[39m.\u001b[39;49mmap(f, [\u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m3\u001b[39;49m]))\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py:364\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    359\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmap\u001b[39m(\u001b[39mself\u001b[39m, func, iterable, chunksize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    360\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    361\u001b[0m \u001b[39m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    362\u001b[0m \u001b[39m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    363\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 364\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_map_async(func, iterable, mapstar, chunksize)\u001b[39m.\u001b[39;49mget()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    766\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mready():\n\u001b[1;32m    767\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/reddit_env_test/lib/python3.9/multiprocessing/pool.py:762\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    761\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwait\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 762\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_event\u001b[39m.\u001b[39;49mwait(timeout)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/reddit_env_test/lib/python3.9/threading.py:574\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    572\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    573\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 574\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    575\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/reddit_env_test/lib/python3.9/threading.py:312\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    310\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 312\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    313\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    314\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "def f(x):\n",
+    "    return x*x\n",
+    "\n",
+    "\n",
+    "with Pool(5) as p:\n",
+    "    print(p.map(f, [1, 2, 3]))\n"
+   ]
   }
  ],
  "metadata": {
