--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -23,6 +23,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('../Preprocessing/testlist.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DebateVaccines\n",
+      "Vaccine\n",
+      "Coronavirus\n",
+      "COVID19\n",
+      "LockdownSkepticism\n",
+      "NoNewNormal\n",
+      "HermanCainAward\n",
+      "CovidVaccinated\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in subreddits:\n",
+    "    print(i[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
